[gd_scene load_steps=8 format=3 uid="uid://riaycvu1w5m2"]

[ext_resource type="Script" path="res://scenes/UI/user_interface/user_interface.gd" id="1_tn11q"]
[ext_resource type="Resource" uid="uid://jdbuxjueoppv" path="res://resources/stats/player_stats.tres" id="2_q2vcm"]
[ext_resource type="PackedScene" uid="uid://cg58h60sbgxk5" path="res://scenes/UI/ability/ability_menu/AbilityMenu.tscn" id="3_gvcg1"]
[ext_resource type="PackedScene" uid="uid://bshwymrhrpeg6" path="res://scenes/UI/ability/ability_bar/AbilityBar.tscn" id="4_wey6e"]
[ext_resource type="PackedScene" uid="uid://66piq0vvug0b" path="res://scenes/UI/inventory/inventory_manager/InventoryManager.tscn" id="5_ycypk"]
[ext_resource type="PackedScene" uid="uid://ctto2lmosqku" path="res://scenes/UI/health_bar/HealthBar.tscn" id="6_sp1uu"]
[ext_resource type="PackedScene" uid="uid://bpc5c4qnwgr7a" path="res://scenes/UI/preview_manager/preview_manager.tscn" id="7_pkqqr"]

[node name="UserInterface" type="CanvasLayer" groups=["UI"]]
script = ExtResource("1_tn11q")
player_stats = ExtResource("2_q2vcm")

[node name="HealthBar" parent="." instance=ExtResource("6_sp1uu")]
scale = Vector2(8, 8)

[node name="InventoryManager" parent="." instance=ExtResource("5_ycypk")]

[node name="AbilityBar" parent="." instance=ExtResource("4_wey6e")]
offset_left = 889.0
offset_top = 1078.0
offset_right = 1018.0
offset_bottom = 1102.0
scale = Vector2(5, 5)

[node name="AbilityMenu" parent="." instance=ExtResource("3_gvcg1")]
offset_left = 588.0
offset_top = 320.0
offset_right = 725.0
offset_bottom = 398.0
scale = Vector2(5, 5)

[node name="PreviewManager" parent="." instance=ExtResource("7_pkqqr")]
